# SIMPLE

./: .dockerignore  .env.sample  .envrc  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  dockerfile  flake.nix  index.404.html  index.bak.html  index.html  license.md  make.bat  pyproject.toml  pyrightconfig.json  robo.nix  script.js  styles.css  video_gen.sh  visualize.sh
data/: README.md
docs/source/: conf.py  developer.md  index.md  license.md  nix-runtime.md  robo-nix.md  troubleshooting.md
docs/source/core/: index.md
docs/source/nix-setup/: index.md  installation.md
docs/source/tasks/: aloha_tabletop_grasp.md  franka_tabletop_grasp.md  index.md
docs/source/tutorials/: data_gen.md  docker.md  eval.md  index.md  installation.md  replay.md  run_env.md  teleop.md  teleop.old.md
docs/source/workflows/: build_custom_robot.md  index.md
examples/: active_perception.py  active_perception_test.py  demo_task_state_dict.json  lerobot.ipynb  motion_gen_reacher.py  multi_arm_reacher.py  multi_target_mp.py  rlds.ipynb
nix/: runtime-base.nix  runtime-host-gpu.nix  runtime.nix
nix/lib/: runtime.nix
patches/curobo/: 0001-nix-fix-torch-cpp-extension-libc-headers.patch
scripts/: collect_data.py  control.ipynb  download.py  download_data.sh  dp_ctrl.py  eval_remote_policy.sh  export_obj_usd.py  export_urdf_to_usd.py  install_curobo.py  install_curobo.sh  install_curobo_docker.sh  install_isaaclab.sh  keyboard_ctrl.py  list_env.py  postprocess_psi0.py  postprocess_psi0_sonic.py  pre-minimal-download.sh  render_sync_check.py  setup_project.sh  setup_python_env.sh  simple_for_psi0.ipynb  sync.sh  test _teleport.py  test_env.py  test_objaverse.ipynb  test_objaverse.py  test_regression.py  test_streaming.py  test_task.py  visualization.py
scripts/nix/: bootstrap-gpu.sh  bootstrap-python.sh  bootstrap.sh  common.sh  prereq-check.sh  shell-init.sh
scripts/tests/: check_curobo_build.sh  check_datagen.sh  check_env_clean.sh  check_eval.sh  check_xrobotoolkit_build.sh  replay_policy_server.py
src/simple/: __init__.py  args.py  constants.py  download.py  resources.json  utils.py
src/simple/action_primitives/: __init__.py  move_down.py  move_left.py  move_right.py  move_up.py
src/simple/agents/: __init__.py  base_agent.py  datagen_agent.py  diffusion_policy_agent.py  keyboard_agent.py  mp.py  mp_agent.py  pico_decoupled_agent.py  pico_sonic_agent.py  primitive_agent.py  replay_agent.py  replay_decoupled_agent.py  sonic_decoupled_wbc_agent.py  sonic_wbc_agent.py  vlm_agent.py  wbc_agent.py
src/simple/assets/: __init__.py  articulate.py  asset_manager.py  graspnet.py  objaverse.py  objects.py  primitive.py
src/simple/baselines/: act.py  act_decoupled_wbc.py  act_g1.py  bresenham_line.py  client.py  dit_policy.py  dp.py  dp_decoupled_wbc.py  dp_g1.py  egovla.py  egovla_decoupled_wbc.py  gr00t_n16.py  gr00t_n16_decoupled_wbc.py  hfm_action.py  hrdt.py  hrdt_decoupled_wbc.py  intervla_decoupled_wbc.py  intervla_m1_g1.py  openvla.py  pi05.py  pi05_decoupled_wbc.py  psi0.py  psi0_decoupled_wbc.py  qwen3vl_7d.py  replay_policy.py  vlt.py
src/simple/cli/: compare_datasets.py  control.py  datagen.py  dr_decoupled_wbc.py  eval.py  eval_decoupled_wbc.py  plan.py  render.py  render_decoupled_wbc.py  replay.py  replay_decoupled_wbc.py  teleop.py  teleop_decoupled_wbc.py
src/simple/core/: __init__.py  action.py  actor.py  asset.py  controller.py  layout.py  (+9 more)
(+168 files in other folders)
